--- a/check.html
+++ b/check.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
 <meta charset="UTF-8">
-<title>Pit Security Check</title>
+<title>Pit Security System</title>
 <style>
 body {
   margin:0;
@@ -47,7 +47,7 @@ input[type=checkbox] {
 <body>
 
 <h2>Pit Security System</h2>
-<p style="text-align:center;">Hier kannst du Text eintragen und Checkbox anklicken.</p>
+<p style="text-align:center;">Trage hier einfach Text ein und klicke die Checkbox.</p>
 
 <textarea placeholder="Hier Name, Infos …"></textarea>
 <label><input type="checkbox"> Bezahlt</label>
