--- a/check.html
+++ b/check.html
@@ -4,66 +4,77 @@
 <meta charset="UTF-8">
 <title>Pit Security Check</title>
 <style>
-body {margin:0; padding:30px; font-family:Arial; background: linear-gradient(135deg,#0a001a,#1a0033); color:white;}
-h2 {text-align:center; font-size:2.5em; background: linear-gradient(90deg,#ff00cc,#00ccff); -webkit-background-clip:text; -webkit-text-fill-color:transparent;}
-textarea {width:100%; height:180px; margin-top:20px; font-size:18px; border-radius:15px; padding:15px; border:none; outline:none;}
-label {display:block; margin-top:20px; font-size:20px;}
-input[type=checkbox]{transform:scale(1.5); margin-right:10px;}
+body {
+  margin: 0;
+  padding: 30px;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #0a001a, #1a0033);
+  color: white;
+}
+
+h2 {
+  text-align: center;
+  font-size: 2.5em;
+  background: linear-gradient(90deg, #ff00cc, #00ccff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+textarea {
+  width: 100%;
+  height: 180px;
+  margin-top: 20px;
+  font-size: 18px;
+  border-radius: 15px;
+  padding: 15px;
+  border: none;
+  outline: none;
+}
+
+label {
+  display: block;
+  margin-top: 20px;
+  font-size: 20px;
+}
+input[type=checkbox] {
+  transform: scale(1.5);
+  margin-right: 10px;
+}
 </style>
-<!-- Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 </head>
 <body>
 
 <h2>Pit Security System</h2>
-<p>Text & „Bezahlt“-Status bleiben für alle Geräte gespeichert.</p>
+<p>Text & „Bezahlt“-Status bleiben auf DEINEM Handy gespeichert.</p>
 
 <textarea id="note" placeholder="Name, Infos ..."></textarea>
+
 <label><input type="checkbox" id="paid"> Bezahlt</label>
 
 <script>
-// 1️⃣ Firebase Config einfügen
-const firebaseConfig = {
-  apiKey: "DEIN_API_KEY",
-  authDomain: "DEIN_PROJECT_ID.firebaseapp.com",
-  databaseURL: "https://DEIN_PROJECT_ID-default-rtdb.firebaseio.com",
-  projectId: "DEIN_PROJECT_ID",
-  storageBucket: "DEIN_PROJECT_ID.appspot.com",
-  messagingSenderId: "1234567890",
-  appId: "1:1234567890:web:abcdefgh"
-};
-
-// 2️⃣ Firebase Init
-firebase.initializeApp(firebaseConfig);
-const db = firebase.database();
-
-// 3️⃣ QR-ID aus URL
+// 1️⃣ ID aus URL
 const params = new URLSearchParams(window.location.search);
-const id = params.get("id") || "default";
+let id = params.get("id") || "default";
 
-// 4️⃣ Referenz in DB
-const ref = db.ref("qrcodes/" + id);
+// 2️⃣ Schlüssel für localStorage
+const textKey = "pit_text_" + id;
+const paidKey = "pit_paid_" + id;
 
-// 5️⃣ Elemente
+// 3️⃣ Elemente
 const textarea = document.getElementById("note");
 const checkbox = document.getElementById("paid");
 
-// 6️⃣ Lade Daten aus Firebase
-ref.get().then(snapshot=>{
-  if(snapshot.exists()){
-    const data = snapshot.val();
-    textarea.value = data.text || "";
-    checkbox.checked = data.paid || false;
-  }
+// 4️⃣ Werte laden
+textarea.value = localStorage.getItem(textKey) || "";
+checkbox.checked = localStorage.getItem(paidKey) === "true";
+
+// 5️⃣ Änderungen speichern
+textarea.addEventListener("input", () => {
+  localStorage.setItem(textKey, textarea.value);
 });
 
-// 7️⃣ Änderungen speichern
-textarea.addEventListener("input", ()=>{
-  ref.update({text:textarea.value, paid:checkbox.checked});
-});
-checkbox.addEventListener("change", ()=>{
-  ref.update({text:textarea.value, paid:checkbox.checked});
+checkbox.addEventListener("change", () => {
+  localStorage.setItem(paidKey, checkbox.checked);
 });
 </script>
 
